Fix open details on mobile bug

--- a/src/styles/components/_time.scss
+++ b/src/styles/components/_time.scss
@@ -6,6 +6,7 @@
 
   &_greeting {
     display: flex;
+    align-items: center;
     gap: 1rem;
   }
   
